--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node .",
-    "dev": "nodemon --ignore client/ ."
+    "start": "yarn build && node .",
+    "dev": "nodemon --ignore client/ .",
+    "build": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0"
