--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build && node .",
+    "start": "node .",
     "dev": "nodemon --ignore client/ .",
     "build": "cd client && npm install && npm run build"
   },
@@ -14,10 +14,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "faker": "^5.4.0"
   },
   "devDependencies": {
-    "faker": "^5.4.0",
     "nodemon": "^2.0.7"
   }
 }
